--- a/index.html
+++ b/index.html
@@ -3,18 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Music Downloader</title>
+    <title>YouTube Downloader</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f5f5f5;
+            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
             margin: 0;
             padding: 0;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #c4302b;
+            margin-bottom: 20px;
+        }
+        .form-container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .textbox {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            font-size: 16px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        .button {
+            background-color: #c4302b;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 4px;
+            transition: background-color 0.3s ease;
+        }
+        .button:hover {
+            background-color: #a22824;
+        }
+        .result-container {
+            display: none;
+            margin-top: 20px;
+        }
+        .result-title {
+            color: #c4302b;
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
+        .result-links {
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 100vh;
-            animation: fadeIn 1s ease;
+            flex-wrap: wrap;
+        }
+        .result-link {
+            margin: 5px;
+            text-decoration: none;
+            color: #c4302b;
+            background-color: #fff;
+            border: 1px solid #c4302b;
+            padding: 8px 16px;
+            border-radius: 4px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+        .result-link:hover {
+            background-color: #c4302b;
+            color: white;
         }
         @keyframes fadeIn {
             from {
@@ -24,115 +84,69 @@
                 opacity: 1;
             }
         }
-        .container {
-            background-color: #fff;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            width: 100%;
-            text-align: center;
-            animation: slideUp 1s ease;
-        }
-        @keyframes slideUp {
-            from {
-                transform: translateY(50px);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-        .logo {
-            width: 150px;
-            margin-bottom: 30px;
-        }
-        h1 {
-            color: #1db954;
-            margin-bottom: 20px;
-            font-size: 24px;
-            font-weight: bold;
-        }
-        input[type="text"] {
-            width: calc(100% - 20px);
-            padding: 12px;
-            margin-bottom: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 16px;
-            outline: none;
-            transition: border-color 0.3s ease;
-        }
-        input[type="text"]:focus {
-            border-color: #1db954;
-        }
-        .button {
-            background-color: #1db954;
-            color: #fff;
-            border: none;
-            padding: 12px 30px;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            outline: none;
-        }
-        .button:hover {
-            background-color: #168f3a;
-        }
-        .progress-bar {
-            width: 100%;
-            background-color: #ddd;
-            border-radius: 5px;
-            height: 20px;
-            margin-bottom: 20px;
-            overflow: hidden;
-            opacity: 0;
-            animation: fadeIn 1s ease 1s forwards;
-        }
-        .progress {
-            width: 0%;
-            height: 100%;
-            background-color: #1db954;
-            transition: width 0.8s ease;
-        }
-        .download-link {
-            display: none;
-            margin-top: 20px;
-            font-size: 16px;
+        .fadeIn {
+            animation: fadeIn 1s ease;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="spotify_logo.png" alt="Spotify Logo" class="logo">
-        <h1>Spotify Music Downloader</h1>
-        <form id="spotifyForm">
-            <input type="text" id="spotifyLink" placeholder="Voer hier de Spotify-nummerlink in">
-            <button type="button" onclick="downloadSpotify()" class="button">Download</button>
-            <div class="progress-bar">
-                <div class="progress"></div>
-            </div>
-        </form>
-        <a id="downloadLink" class="download-link" download></a>
+        <h1>YouTube Downloader</h1>
+        <div class="form-container fadeIn">
+            <input type="text" id="youtubeLink" class="textbox" placeholder="Voer hier de YouTube-video-URL in">
+            <button type="button" onclick="downloadYouTubeVideo()" class="button">Download Video</button>
+            <button type="button" onclick="downloadYouTubeAudio()" class="button">Download Audio</button>
+        </div>
+        <div id="resultContainer" class="result-container">
+            <div id="resultTitle" class="result-title">Resultaten:</div>
+            <div id="resultLinks" class="result-links"></div>
+        </div>
     </div>
 
     <script>
-        function downloadSpotify() {
-            var spotifyLink = document.getElementById("spotifyLink").value;
-            var progressBar = document.querySelector(".progress");
-            var downloadLink = document.getElementById("downloadLink");
-            if (spotifyLink.startsWith("https://open.spotify.com/track/")) {
-                var trackID = spotifyLink.split("/")[4];
-                progressBar.style.width = "100%";
-                setTimeout(function() {
-                    downloadLink.href = "https://spotify.com/download/" + trackID;
-                    downloadLink.setAttribute("download", "");
-                    downloadLink.click();
-                }, 800); // Simuleer een vertraging van 800 ms voor de demo
-            } else {
-                alert("Voer een geldige Spotify-nummerlink in.");
+        async function downloadYouTubeVideo() {
+            const youtubeLink = document.getElementById("youtubeLink").value;
+            const resultContainer = document.getElementById("resultContainer");
+            const resultLinks = document.getElementById("resultLinks");
+            try {
+                const response = await fetch(`/download/video?url=${encodeURIComponent(youtubeLink)}`);
+                if (!response.ok) {
+                    throw new Error('Er is een fout opgetreden bij het downloaden van de video.');
+                }
+                const data = await response.json();
+                if (!data.error) {
+                    const videoLink = `<a class="result-link" href="${data.link}" download>Download Video</a>`;
+                    resultLinks.innerHTML = videoLink;
+                    resultContainer.style.display = "block";
+                } else {
+                    throw new Error(data.error);
+                }
+            } catch (err) {
+                console.error(err);
+                alert('Er is een fout opgetreden. Controleer de YouTube-video-URL en probeer het opnieuw.');
+            }
+        }
+
+        async function downloadYouTubeAudio() {
+            const youtubeLink = document.getElementById("youtubeLink").value;
+            const resultContainer = document.getElementById("resultContainer");
+            const resultLinks = document.getElementById("resultLinks");
+            try {
+                const response = await fetch(`/download/audio?url=${encodeURIComponent(youtubeLink)}`);
+                if (!response.ok) {
+                    throw new Error('Er is een fout opgetreden bij het downloaden van de audio.');
+                }
+                const data = await response.json();
+                if (!data.error) {
+                    const audioLink = `<a class="result-link" href="${data.link}" download>Download Audio</a>`;
+                    resultLinks.innerHTML = audioLink;
+                    resultContainer.style.display = "block";
+                } else {
+                    throw new Error(data.error);
+                }
+            } catch (err) {
+                console.error(err);
+                alert('Er is een fout opgetreden. Controleer de YouTube-video-URL en probeer het opnieuw.');
             }
         }
     </script>
